force-app/main/default/objects/Historique_Macroprofils__c/Historique_Macroprofils__c.object-meta.xml
<CustomObject>
    <description>Pour historiser les associations de macroprofils aux PUDO.</description>
    <label>Historique de Macroprofil</label>
    <nameField>
        <displayFormat>HMP-{0000}</displayFormat>
        <label>Numéro d&#39;Historique Macroprofils</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historique de Macroprofils</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>