force-app/main/default/objects/Historique_Macroprofils__c/fields/Date_de_modification_MP__c.field-meta.xml
<CustomField>
    <fullName>Date_de_modification_MP__c</fullName>
    <label>Date de modification MP</label>
    <type>Date</type>
</CustomField>