force-app/main/default/objects/Historique_Macroprofils__c/fields/Macroprofil_actuel__c.field-meta.xml
<CustomField>
    <fullName>Macroprofil_actuel__c</fullName>
    <label>Macroprofil actuel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>