force-app/main/default/objects/Historique_Macroprofils__c/fields/Macroprofil_de_reference__c.field-meta.xml
<CustomField>
    <fullName>Macroprofil_de_reference__c</fullName>
    <label>Macroprofil de référence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>