force-app/main/default/objects/Historique_Macroprofils__c/fields/Statut_de_modification__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_modification__c</fullName>
    <label>Statut de modification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>